<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/md_keylines">

<!--    match reminder time-->
    <TextView
        android:id="@+id/tvReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_match_reminder" />
    <EditText
        android:id="@+id/match_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time_hint"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_button"
        android:id="@+id/btn_time" />

<!--    gender-->
    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender" />
    <EditText
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/male"/>


<!--    distance-->
    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_search_dist" />
    <EditText
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/distance_hint"/>

<!--    privacy-->
    <TextView
        android:id="@+id/tvPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_privacy_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_private"/>
        <RadioButton
            android:id="@+id/radio_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_public"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

<!--    age interest range-->
    <TextView
        android:id="@+id/tvInterestRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_interest" />
<!--    <EditText-->
<!--        android:id="@+id/age_interest_hi"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/age_hint_lo"/>-->
    <NumberPicker
        android:id="@+id/age_interest_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and" />
    <NumberPicker
        android:id="@+id/age_interest_lo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
<!--    <EditText-->
<!--        android:id="@+id/age_interest_lo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/age_hint_hi"/>-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/between" />-->
<!--    <Spinner-->
<!--        android:id="@+id/spinner1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/and" />-->
<!--    <Spinner-->
<!--        android:id="@+id/spinner2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content" />-->

<!--    save-->
    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
</LinearLayout>