<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:background="#FFB6C1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/profile_photo"
            android:contentDescription="@string/profile_picture"
            android:layout_marginTop="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile" />
        <TextView
            android:id="@+id/profile_name"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp">

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>