...
    <string name="dob_entry">Select your date of birth: </string>
    <string name="userDobHint">12/12/12</string>
    <string name="userOccupationHint">Occupation</string>
    <string name="userDescriptionHint">Describe yourself</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>

    <string name="match_name">MatchFirstName MatchLastName</string>
    <string name="user_desc">Description of match user.</string>
    <string name="profile_picture">Your profile picture</string>
    <string name="user_profile_picture">Profile picture of user</string>

...
